--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@tanstack/react-query": "^4.24.10",
+    "@tanstack/react-query-devtools": "^4.24.10",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "add": "^2.0.6",
     "axios": "^1.3.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "mongodb": "^5.0.1",
     "next": "13.1.6",
+    "nextjs-cors": "^2.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "yarn": "^1.22.19"
   }
 }
